js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunction/lib1/l1.1.kt
inline fun foo() : Int {
    val x: Any? = "1"
    return x as Int
}
